<resources>
    //////////////////////////////////////////////////////////////
    // Global
    <string name="datalbl">Selecione a data</string>
    <string name="dataformat">01/01/1900</string>
    <string name="lblida">Saída</string>
    <string name="lblvolta">Retorno</string>
    <string name="horaformat">00:00</string>
    <string name="raio">Raio (KM)</string>
    <string name="raiokm">000</string>
    <string name="contato">Telefone para contato</string>
    <string name="localizacao">Localização</string>
    <string name="cep">CEP</string>
    <string name="pais">País</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="finalizaAPP">Sair</string>

    /////////////////////////////////////////////////////////////
    // Orçamentos
    <string name="app_name">Vai de Van</string>
    <string name="orcName">Orçamentos</string>
    <string name="hint_nome">Digite seu nome</string>
    <string name="limpar">Limpar</string>
    <string name="buscar">Buscar</string>
    <string name="funcao">Selecione o tipo de serviço</string>
    <string name="solOrc">Orçamento</string>
    <string name="orcSaida">Lugar de Saída</string>
    <string name="orcRetorno">Lugar para Retorno</string>
    <string name="orcMsgConfOrcamento">Orçamento enviado! Favor aguardar respostas!</string>
    <string name="orcMsgDadosInvalidos">Favor preencher os dados!</string>

    // Menu Main
    <string name="action_settings">Configurações</string>

    // Itens da dropdown
    <string-array name="tiposervicos">
        <item> </item>
        <item>Viagem</item>
        <item>Escolar/Universitário</item>
        <item>Excursão</item>
        <item>Outros</item>
    </string-array>

    ////////////////////////////////////////////////////////////
    // Login
    <string name="title_activity_login_page">Login</string>

    <string name="usuario">Usuário</string>
    <string name="password">Senha</string>
    <string name="registrar">Registrar</string>
    <string name="botaoLogar">Login</string>
    <string name="botaoSair">Sair</string>
    <string name="consiteLogin">Permanecer Conectado</string>
    <string name="title_activity_registrar">Registrar</string>

    // Validação Senha
    <string name="validacaosenha">Usuário/senha inválidos</string>

    // Cadastro Van
    <string name="regvan">Van</string>

    <string name="email">e-Mail</string>
    <string name="ddi">000</string>
    <string name="ddd">000</string>
    <string name="fone">000000000</string>
    <string name="nomecontato">Nome do contato</string>
    <string name="regdados">Registrar</string>
    <string name="cancdados">Cancelar</string>
    <string name="senha">Digite a senha</string>
    <string name="confsenha">Confirme a senha</string>
    <string name="regsvctipo">Serviços prestados</string>

    // Tipos de serviço
    <string name="regtpsvc1">Viagem</string>
    <string name="regtpsvc2">Escolar/Universitário</string>
    <string name="regtpsvc3">Excursão</string>
    <string name="regtpsvc4">Outros</string>

    // Menu Cadastro
    <string name="mRegVan">Van</string>
    <string name="mRegCliente">Cliente</string>

    ///////////////////////////////////////////////////////////////
    // Painel
    <string name="title_activity_painel_vans">Painel de Vans</string>
    <string name="painelNome">Nome:</string>
    <string name="painelEmail">e-Mail:</string>
    <string name="painelTelefone">Telefone:</string>
    <string name="paineltpsvc">Tipo serviço:</string>

    // Menu Painel
    <string name="painelBusca">Orçamento</string>
    <string name="title_activity_reg_van">Registro de Vans</string>

    ///////////////////////////////////////////////////////////////
    // Registro de clientes
    <string name="title_activity_reg_client">Registro de Clientes</string>
    <string name="regclient">Cliente</string>
    <string name="exibeContato">Desejo exibir meu contato</string>
    <string name="strlogfb">Login com Facebook</string>

    ///////////////////////////////////////////////////////////////
    // Mensagens de validação
    <string name="selecaoCadastro">Selecione o tipo de cadastro</string>
    <string name="confereSenha">As senhas devem ser as mesmas!</string>
    <string name="validaGeral">Valida geral</string>
    <string name="cadOk">Cadastro validado com sucesso!</string>
    <string name="cadError">Erro ao efetuar o cadastro!</string>
    <string name="confDados">Todos os dados devem ser preenchidos!  </string>

</resources>

