<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#CFD8DC"
    tools:context="br.com.rt.govan.registrar">

    <RadioGroup
        android:id="@+id/grupotipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <RadioButton
            android:id="@+id/regvan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/regvan" />

        <RadioButton
            android:id="@+id/regclient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/regclient" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearDados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grupotipo"
        android:orientation="vertical"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nomecontato"
            android:inputType="textPersonName"
            android:paddingBottom="8dp" />

        <LinearLayout
            android:id="@+id/linearRegTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <EditText
                android:id="@+id/regddi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ddi"
                android:inputType="number" />

            <EditText
                android:id="@+id/regddd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ddd"
                android:inputType="number" />

            <EditText
                android:id="@+id/regfone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:hint="@string/fone"
                android:inputType="phone" />
        </LinearLayout>

        <EditText
            android:id="@+id/senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:paddingBottom="8dp" />

        <EditText
            android:id="@+id/confsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confsenha"
            android:inputType="textPassword"
            android:paddingBottom="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/regdados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/regdados" />

        <Button
            android:id="@+id/cancdados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancdados" />
    </LinearLayout>
</RelativeLayout>
