<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.rt.govan.regVan">

    <ScrollView
        android:id="@+id/regVanSVCentral"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:isScrollContainer="true"
        android:overScrollMode="ifContentScrolls"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/linearDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/localizacao"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:id="@+id/llregvanpais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/regvancep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/cep"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/estado"/>

                    <TextView
                        android:id="@+id/regvanspestado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8sp"
                        android:paddingRight="8sp"
                        android:textSize="18sp"
                        android:hint="@string/estado">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4sp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text="@string/cidade"/>

                    <TextView
                        android:id="@+id/regvanspcidade"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="8sp"
                        android:paddingRight="8sp"
                        android:textSize="18sp"
                        android:hint="@string/cidade">
                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <EditText
                android:id="@+id/vanNomeRzsc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/regvan"
                android:inputType="textPersonName"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/vanNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomecontato"
                android:inputType="textPersonName"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/vanEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/vanSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:paddingBottom="8dp" />

            <EditText
                android:id="@+id/vanConfSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confsenha"
                android:inputType="textPassword"
                android:paddingBottom="8dp" />

            <LinearLayout
                android:id="@+id/vanButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/vanRegdados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/regdados" />

                <Button
                    android:id="@+id/vanCancdados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancdados" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
