<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFD8DC"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PaginaPrincipal">

    <LinearLayout
        android:id="@+id/linearGeral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/funcao"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/tiposvc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/orcSaida"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orcSaida"/>

            <EditText
                android:id="@+id/orcRetorno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/orcRetorno"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDatatxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:text="@string/lblida"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:text="@string/lblvolta"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/datainipesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dataformat"/>

            <Button
                android:id="@+id/datafimpesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/dataformat" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/horainipesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/horaformat" />

            <Button
                android:id="@+id/horafimpesquisa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/horaformat" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearGeral"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <Button
            android:id="@+id/btnok"
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/solOrc" />

        <Button
            android:id="@+id/btnreset"
            android:layout_width="95dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/limpar" />

    </LinearLayout>


</RelativeLayout>
